--- a/code/att.html
+++ b/code/att.html
@@ -144,6 +144,8 @@ title: "TalentBrew Article Scraper"
 
 <button id="btn-reload">Reload</button>
 
+<h2>Enjoy cut-n-pasting into admin tool!</h2>
+
 <pre><code></code></pre>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
