--- a/code/att.html
+++ b/code/att.html
@@ -154,7 +154,7 @@ title: "TalentBrew Article Scraper"
 
 $(".link-list a").on( "click", function() {
 
-	$(this).append(" - <b>copied!</b>").contents().unwrap();
+	$(this).append(" - <b>Copied!</b>").contents().unwrap();
 
 	var Path = $(this).attr("href");
 
