--- a/code/att.html
+++ b/code/att.html
@@ -59,7 +59,6 @@ title: "TalentBrew Article Scraper"
 	<li><a href="https://att.runmytests.com/workplace-2020">https://att.runmytests.com/workplace-2020</a></li>
 	<li><a href="https://att.runmytests.com/inside-att-drive-studio">https://att.runmytests.com/inside-att-drive-studio</a></li>
 	<li><a href="https://att.runmytests.com/article-knowledge-is-power-how-miranda-bradley-lives-out-her-passion-for-learning-at-att">https://att.runmytests.com/article-knowledge-is-power-how-miranda-bradley-lives-out-her-passion-for-learning-at-att</a></li>
-	<li><a href="https://att.runmytests.com/article-knowledge-is-power-how-miranda-bradley-lives-out-her-passion-for-learning-at-att">https://att.runmytests.com/article-knowledge-is-power-how-miranda-bradley-lives-out-her-passion-for-learning-at-att</a></li>
 	<li><a href="https://att.runmytests.com/part-time-retail-full-advantages">https://att.runmytests.com/part-time-retail-full-advantages</a></li>
 	<li><a href="https://att.runmytests.com/latinos-play-big-role-att">https://att.runmytests.com/latinos-play-big-role-att</a></li>
 	<li><a href="https://att.runmytests.com/leading-by-example-att-technicians-jump-action-car-accidents">https://att.runmytests.com/leading-by-example-att-technicians-jump-action-car-accidents</a></li>
@@ -84,12 +83,10 @@ title: "TalentBrew Article Scraper"
 	<li><a href="https://att.runmytests.com/meet-the-minds-volinsky">https://att.runmytests.com/meet-the-minds-volinsky</a></li>
 	<li><a href="https://att.runmytests.com/mychele-riddick-lead-college-recruiter-att">https://att.runmytests.com/mychele-riddick-lead-college-recruiter-att</a></li>
 	<li><a href="https://att.runmytests.com/article-Mujeres-en-ATT-Mexico">https://att.runmytests.com/article-Mujeres-en-ATT-Mexico</a></li>
-	<li><a href="https://att.runmytests.com/article-Mujeres-en-ATT-Mexico">https://att.runmytests.com/article-Mujeres-en-ATT-Mexico</a></li>
 	<li><a href="https://att.runmytests.com/att-agentes-servicio-al-cliente-Ciudad-de-Mexico">https://att.runmytests.com/att-agentes-servicio-al-cliente-Ciudad-de-Mexico</a></li>
 	<li><a href="https://att.runmytests.com/att-supporting-military-veterans-more-than-80-years">https://att.runmytests.com/att-supporting-military-veterans-more-than-80-years</a></li>
 	<li><a href="https://att.runmytests.com/article-att-supports-native-american-community">https://att.runmytests.com/article-att-supports-native-american-community</a></li>
 	<li><a href="https://att.runmytests.com/att-cyber-pro-outwits-cyber-crooks">https://att.runmytests.com/att-cyber-pro-outwits-cyber-crooks</a></li>
-	<li><a href="https://att.runmytests.com/article-practicing-what-we-preach">https://att.runmytests.com/article-practicing-what-we-preach</a></li>
 	<li><a href="https://att.runmytests.com/article-practicing-what-we-preach">https://att.runmytests.com/article-practicing-what-we-preach</a></li>
 	<li><a href="https://att.runmytests.com/article-reflecting-on-atterg17-latoya-henrys-employee-perspective">https://att.runmytests.com/article-reflecting-on-atterg17-latoya-henrys-employee-perspective</a></li>
 	<li><a href="https://att.runmytests.com/article-navy-seal-makes-his-mark">https://att.runmytests.com/article-navy-seal-makes-his-mark</a></li>
@@ -144,7 +141,7 @@ title: "TalentBrew Article Scraper"
 
 <button id="btn-reload">Reload</button>
 
-<h2>Enjoy cut-n-pasting into admin tool!</h2>
+<h2>Now just copy into admin tool! It's so easy!</h2>
 
 <pre><code></code></pre>
 
