Template Maintenance! Happy 2018!

--- a/code/att.html
+++ b/code/att.html
@@ -139,7 +139,7 @@ title: "TalentBrew Article Scraper"
 
 <button id="btn-reload">Reload</button>
 
-<h2>Now just copy into admin tool! It's so easy!</h2>
+<p>Now just copy the below content into the admin tool! It's so easy!</p>
 
 <pre><code></code></pre>
 
