--- a/code/grab-html.html
+++ b/code/grab-html.html
@@ -1,19 +1,26 @@
 ---
 layout: default
-title: "Page Content Grabber"
+title: "Page Content Scraper"
 ---
 
-<p>A little utility to grab needed content from a page via ajax calls. Handy and better than having to go to the SA tool to grab what you need.</p>
+<p>A little utility to scrape needed content from a page via ajax calls. Handy and better than having to go to the SA tool to grab what you need.</p>
+
+<p>Before you begin, do you want to render raw HTML or parsed HTML? The default output is code.</p>
+
+<button id="btn-html">Parsed HTML</button>
 
 <ul class="link-list">
 	<li><a href="https://www.tmp.com/if-this-desk-could-talk">https://www.tmp.com/if-this-desk-could-talk</a></li>
 	<li><a href="https://www.tmp.com/debunking-social-media-recruiting-myths">https://www.tmp.com/debunking-social-media-recruiting-myths</a></li>
 	<li><a href="https://www.tmp.com/emoji-job-description">https://www.tmp.com/emoji-job-description</a></li>
+	<li><a href="https://www.tmp.com/thought-leader-effects-of-mobilegeddon">https://www.tmp.com/thought-leader-effects-of-mobilegeddon</a></li>
 </ul>
 
-<button id="btn-html">Render HTML</button>
-
 <button id="btn-clear">Clear Code</button>
+
+<button id="btn-reload">Reload</button>
+
+<p>Now just copy the below content into the admin tool! It's so easy!</p>
 
 <pre><code></code></pre>
 
@@ -22,6 +29,8 @@ title: "Page Content Grabber"
 <script>
 
 $(".link-list a").on( "click", function() {
+
+	$(this).append(" - <b>Copied!</b>").contents().unwrap();
 
 	var Path = $(this).attr("href");
 
@@ -49,11 +58,20 @@ $("#btn-html").on( "click", function() {
 
 	$(this).toggleClass("html-render");
 
+	var text = $(this).text();
+	$(this).text(text == "Render HTML" ? "Render Code" : "Render HTML");
+
 });
 
 $("#btn-clear").on( "click", function() {
 
 	$("code").empty();
+
+});
+
+$("#btn-reload").on( "click", function() {
+
+	location.reload();
 
 });
 
