--- a/code/grab-html.html
+++ b/code/grab-html.html
@@ -22,7 +22,7 @@ title: "Page Content Scraper"
 
 <p>Now just copy the below content into the admin tool! It's so easy!</p>
 
-<pre><code></code></pre>
+<pre><code>Content...</code></pre>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
