--- a/support/index.html
+++ b/support/index.html
@@ -1,9 +1,9 @@
 
-<p class="effective-date">Last updated <time>August 18th, 2018</time></p>
+<p class="effective-date">Last updated <time>August 20th, 2018</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
-<img src="https://tbcdn.talentbrew.com/company/3401/v1_0/img/global/tmp-web-standards.png" class="article-image" alt=""/>
+<img src="https://tbcdn.talentbrew.com/company/3401/v1_0/img/global/tmp-web-standards.png" class="article-image" alt="">
 
 <p>Our development methodologies adhere to many standards and guidelines proposed by the <a href="http://www.w3c.org/" title="World Wide Web Consortium">W3C</a>.</p>
 
