--- a/support/index.html
+++ b/support/index.html
@@ -1,5 +1,5 @@
 
-<p class="effective-date">Last updated <time>August 20th, 2018</time></p>
+<p class="effective-date">Last updated <time>March 4th, 2019</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
@@ -11,7 +11,7 @@
 
 <p>By adopting modern principles of design and development, we can also ensure <em>stability</em>. Web sites that work well in today's modern browsers will also work well in <a href="http://futurefriendlyweb.com/">future</a> browsers. This is the <em>promise</em> of supporting standards based development and best practices.</p>
 
-<p>To learn more about our <a href="https://tmpworldwide.github.io/">open coding standards</a>, please visit us on GitHub.</p>
+<p>To learn more about our <a href="https://tmpworldwide.dev/">open coding standards</a>, please visit us on GitHub.</p>
 
 <h2 id="accessibility">Accessibility</h2>
 
@@ -25,8 +25,8 @@
   <li>Windows 10</li>
   <li>Windows 8/8.1</li>
   <li>Mac OS 10.12 (Sierra)</li>
+  <li>iOS 12.x</li>
   <li>iOS 11.x</li>
-  <li>iOS 10.x</li>
   <li>Android 8.x</li>
   <li>Android 7.x</li>
   <li>Android 6.x</li>
