--- a/support/index.html
+++ b/support/index.html
@@ -44,6 +44,17 @@
   <li>Internet Explorer 11</li>
 </ul>
 
+<h2 id="email">Email Support</h2>
+ 
+<p>Corresponding to the date in which your project has launched, we test all text and HTML based emails in the following clients:</p>
+
+<ul>
+  <li>Outlook (Desktop Only)</li>
+  <li>iPhone</li>
+  <li>Gmail Desktop (Chrome Only)</li>
+  <li>Gmail Android (Upon Request Only)</li>
+</ul>
+
 <p><em>Please note that we do not support browsers that have been modified, run in compatibility mode, or filter out code via proxy filtering, that is required for the normal operation of your site.</em></p>
 
 <p>Our development team analyzes global <a href="http://gs.statcounter.com/">browser market share</a> and client web traffic data on a quarterly basis. Web browser support ends when that browser represents less than 5% of all market share and/or web traffic.</p>
