--- a/support/index.html
+++ b/support/index.html
@@ -49,7 +49,7 @@
 <p>Corresponding to the date in which your project has launched, we test all text and HTML based emails in the following clients:</p>
 
 <ul>
-  <li>Outlook (Latest version of Outllok on Windows 10 only)</li>
+  <li>Outlook (Latest version of Outlook on Windows 10 only)</li>
   <li>iPhone (Latest version of iOS Mail only)</li>
   <li>Gmail Desktop (Latest browser versions only, except for Internet Explorer)</li>
   <li>Gmail Android (Upon Request Only)</li>
