--- a/support/index.html
+++ b/support/index.html
@@ -46,7 +46,7 @@
 
 <h2 id="email">Email Support</h2>
 
-<p>Corresponding to the date in which your project has launched, we test all text and HTML based emails in the following clients:</p>
+<p>Corresponding to the date in which your project has launched, we test all text and HTML based emails in the following email clients:</p>
 
 <ul>
   <li>Outlook (Latest version of Outlook on Windows 10 only)</li>
