--- a/support/index.html
+++ b/support/index.html
@@ -24,7 +24,7 @@
 <ul>
   <li>Windows 10</li>
   <li>Windows 8/8.1</li>
-  <li>Mac OS 10.12 (Sierra)</li>
+  <li>macOS 10.14 (Mojave)</li>
   <li>iOS 12.x</li>
   <li>iOS 11.x</li>
   <li>Android 8.x</li>
