Changed http to https

--- a/support/index.html
+++ b/support/index.html
@@ -5,7 +5,7 @@
 
 <img src="https://tbcdn.talentbrew.com/company/3401/v1_0/img/global/tmp-web-standards.png" class="article-image" alt="">
 
-<p>Our development methodologies adhere to many standards and guidelines proposed by the <a href="http://www.w3c.org/" title="World Wide Web Consortium">W3C</a>.</p>
+<p>Our development methodologies adhere to many standards and guidelines proposed by the <a href="https://www.w3c.org/" title="World Wide Web Consortium">W3C</a>.</p>
 
 <p>We also embrace best practices found in the web design and development community. By using the most modern techniques at our disposal, we can craft an experience that is both engaging and accessible to all users.</p>
 
@@ -57,6 +57,6 @@
 
 <p><em>Please note that we do not support browsers that have been modified, run in compatibility mode, or filter out code via proxy filtering, that is required for the normal operation of your site.</em></p>
 
-<p>Our development team analyzes global <a href="http://gs.statcounter.com/">browser market share</a> and client web traffic data on a quarterly basis. Web browser support ends when that browser represents less than 5% of all market share and/or web traffic.</p>
+<p>Our development team analyzes global <a href="https://gs.statcounter.com/">browser market share</a> and client web traffic data on a quarterly basis. Web browser support ends when that browser represents less than 5% of all market share and/or web traffic.</p>
 
 <p>We do not, as a matter of course, support browsers that are not listed within this document. Should your users or company's browser needs differ, please consult your account representative immediately.</p>
