--- a/support/index.html
+++ b/support/index.html
@@ -51,7 +51,7 @@
 <ul>
   <li>Outlook (Latest version of Outlook on Windows 10 only)</li>
   <li>iPhone (Latest version of iOS Mail only)</li>
-  <li>Gmail Desktop (Latest browser versions only, except for Internet Explorer)</li>
+  <li>Gmail Desktop (Latest <a href="#browsers">browser versions</a> only, except for Internet Explorer)</li>
   <li>Gmail Android (Upon Request Only)</li>
 </ul>
 
