--- a/support/index.html
+++ b/support/index.html
@@ -9,7 +9,7 @@
 
 <p>We also embrace best practices found in the web design and development community. By using the most modern techniques at our disposal, we can craft an experience that is both engaging and accessible to all users.</p>
 
-<p>By adopting modern principles of design and development, we can also ensure <em>stability</em>. Web sites that work well in today's modern browsers will also work well in <a href="http://futurefriendlyweb.com/">future</a> browsers. This is the <em>promise</em> of supporting standards based development and best practices.</p>
+<p>By adopting modern principles of design and development, we can also ensure <em>stability</em>. Web sites that work well in today's modern browsers will also work well in future browsers. This is the <a href="https://futurefriendlyweb.com/">promise of supporting standards based development and best practices</a>.</p>
 
 <p>To learn more about our <a href="https://tmpworldwide.dev/">open coding standards</a>, please visit us on GitHub.</p>
 
@@ -51,7 +51,7 @@
 <ul>
   <li>Outlook (Latest version of Outlook on Windows 10 only)</li>
   <li>iPhone (Latest version of iOS Mail only)</li>
-  <li>Gmail Desktop (Latest <a href="#browsers">browser versions</a> only, except for Internet Explorer 11)</li>
+  <li>Gmail Desktop (Latest <a href="#browser">browser versions</a> only, except for Internet Explorer 11)</li>
   <li>Gmail Android (Upon Request Only)</li>
 </ul>
 
