--- a/support/index.html
+++ b/support/index.html
@@ -9,7 +9,7 @@
 
 <p>We also embrace best practices found in the web design and development community. By using the most modern techniques at our disposal, we can craft an experience that is both engaging and accessible to all users.</p>
 
-<p>By adopting modern principles of design and development, we can also ensure <em>stability</em>. Web sites that work well in today's modern browsers will also work well in future browsers. This is the <a href="https://futurefriendlyweb.com/">promise of supporting standards based development and best practices</a>.</p>
+<p>By adopting modern principles of design and development, we can also ensure <em>stability</em>. Web sites that work well in today's modern browsers will also work well in future browsers. This is the <a href="http://futurefriendlyweb.com/">promise of supporting standards based development and best practices</a>.</p>
 
 <p>To learn more about our <a href="https://tmpworldwide.dev/">open coding standards</a>, please visit us on GitHub.</p>
 
