--- a/support/index.html
+++ b/support/index.html
@@ -5,17 +5,13 @@
 
 <img src="https://tbcdn.talentbrew.com/company/3401/v1_0/img/global/tmp-web-standards.png" class="article-image" alt="">
 
-<p>Our design and development methodologies adhere to many standards and guidelines proposed by the <a href="https://www.w3c.org/" title="World Wide Web Consortium">W3C</a>.</p>
+<p>Our design and development methodologies adhere to standards and guidelines proposed by the <a href="https://www.w3c.org/">W3C (World Wide Web Consortium)</a> and best practices found within the design and development community. By using the most modern and inclusive techniques available, TMP Worldwide can craft an experience that is both engaging and accessible to all users.</p>
 
-<p>We also embrace best practices found in the web design and development community. By using the most modern techniques at our disposal, we can craft an experience that is both engaging and accessible to all users.</p>
-
-<p>By adopting modern principles of design and development, we can also ensure <em>stability</em>. Web sites that work well in today's modern browsers will also work well in future browsers. This is the <a href="http://futurefriendlyweb.com/">promise of supporting standards based design and development and best practices</a>.</p>
-
-<p>To learn more about our <a href="https://tmpworldwide.dev/">open coding standards</a>, please visit us on GitHub.</p>
+<p>To learn more about our <a href="https://tmpworldwide.dev/">design and development standards</a>, please visit us on GitHub.</p>
 
 <h2 id="accessibility">Accessibility</h2>
 
-<p>All of your prospective job candidates, regardless of physical or technological capabilities, have the right to learn more about your company and access all job listings. To preserve users' right of universal access, our baseline design and development standards for all of our web offerings <em>attempt</em> to meet as many WCAG 2.1 Level A and AA guidelines as possible. However, many aspects of accessibility touch upon how a site is designed and implemented and require a more stringent process, so if there is a need to fully support accessibility guidelines, please bring this to the attention of your account representative as soon as possible.</p>
+<p>At TMP Worldwide, we beleive that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individuals right to universal access, we <em>attempt</em> to meet as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
 
 <h2 id="operating-systems">Operating System Support</h2>
 
