--- a/support/index.html
+++ b/support/index.html
@@ -11,7 +11,7 @@
 
 <h2 id="accessibility">Accessibility</h2>
 
-<p>At TMP Worldwide, we beleive that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individuals right to universal access, we <em>attempt</em> to meet as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
+<p>At TMP Worldwide, we believe that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individuals right to universal access, we <em>attempt</em> to meet as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
 
 <h2 id="operating-systems">Operating System Support</h2>
 
