--- a/bugs/chrome-crossorigin.html
+++ b/bugs/chrome-crossorigin.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url=https://spellacy.net/bug/2016/09/26/chrome-crossorigin.html">
+<meta http-equiv="Refresh" content="0; url=https://michaelspellacy.com/bug/2016/09/26/chrome-crossorigin.html">
