--- a/bugs/ios-tappy-bug.html
+++ b/bugs/ios-tappy-bug.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url=https://spellacy.net/bug/2015/04/30/youtube-embed-not-working.html">
+<meta http-equiv="Refresh" content="0; url=https://michaelspellacy.com/bug/2015/04/30/youtube-embed-not-working.html">
