IE11 Death Knell

--- a/support/index.html
+++ b/support/index.html
@@ -1,5 +1,5 @@
 
-<p class="effective-date">Last updated <time>June 5th, 2019</time></p>
+<p class="effective-date">Last updated <time>November 25th, 2019</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
@@ -11,7 +11,7 @@
 
 <h2 id="accessibility">Accessibility</h2>
 
-<p>At TMP Worldwide, we believe that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individuals right to universal access, we <em>attempt</em> to meet as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
+<p>At TMP Worldwide, we believe that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individual’s right to universal access, we <em>attempt</em> to meet as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
 
 <h2 id="operating-systems">Operating System Support</h2>
 
@@ -30,14 +30,13 @@
 
 <h2 id="browser">Browser Support</h2>
 
-<p>With the exception of Internet Explorer, TMP supports the <strong>current</strong> and <strong>prior major</strong> release versions of all browsers. Corresponding to the date in which your project has launched, we test all work in the following:</p>
+<p>TMP supports the <strong>current</strong> and <strong>prior major</strong> release versions of all major browsers. Corresponding to the date in which your project has launched, we test all work in the following:</p>
 
 <ul>
   <li><a href="https://developer.chrome.com/native-client/sdk/release-notes">Google Chrome</a></li>
   <li><a href="https://www.mozilla.org/en-US/firefox/releases/">Mozilla Firefox</a></li>
   <li><a href="https://developer.apple.com/library/prerelease/mac/releasenotes/General/WhatsNewInSafari/Introduction/Introduction.html#//apple_ref/doc/uid/TP40014305-CH1-SW1">Apple Safari</a></li>
   <li><a href="https://developer.microsoft.com/en-us/microsoft-edge/platform/changelog/">Microsoft Edge</a></li>
-  <li>Internet Explorer 11</li>
 </ul>
 
 <h2 id="email">Email Support</h2>
@@ -56,3 +55,11 @@
 <p>We do not, as a matter of course, support browsers that are not listed within this document. Should your users or company's browser needs differ, please consult your account representative immediately.</p>
 
 <p><em>Please note that we do not support browsers that have been modified, run in compatibility mode, or filter out code via proxy filtering, that is required for the normal operation of your site.</em></p>
+
+<h2 id="limited-support">Limited Browser Support</h2>
+
+<p>The following browsers(s) falls under limited support. This is a base level of support which provides core content, functionality and base styling. Due to a lack of support for more advanced features and styling capabilities in these browsers, issues of an aesthetic nature are not typically addressed unless they directly interfere with the usability of the website. Any questions or concerns regarding this level of support can be communicated to the project's account team.</p>
+
+<ul>
+  <li>Internet Explorer 11</li>
+</ul>
