--- a/support/index.html
+++ b/support/index.html
@@ -1,5 +1,5 @@
 
-<p class="effective-date">Last updated <time>November 25th, 2019</time></p>
+<p class="effective-date">Last updated <time>January 1st, 2020</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
