--- a/support/index.html
+++ b/support/index.html
@@ -58,7 +58,7 @@
 
 <h2 id="limited-support">Limited Browser Support</h2>
 
-<p>The following browsers(s) falls under limited support. This is a base level of support which provides core content, functionality and base styling. Due to a lack of support for more advanced features and styling capabilities in these browsers, issues of an aesthetic nature are not typically addressed unless they directly interfere with the usability of the website. Any questions or concerns regarding this level of support can be communicated to the project's account team.</p>
+<p>The following browser(s) falls under limited support. This is a base level of support which provides core content, functionality and base styling. Due to a lack of support for more advanced features and styling capabilities in these browsers, issues of an aesthetic nature are not typically addressed unless they directly interfere with the usability of the website. Any questions or concerns regarding this level of support can be communicated to the project's account team.</p>
 
 <ul>
   <li>Internet Explorer 11</li>
