--- a/a11y/baseline/index.html
+++ b/a11y/baseline/index.html
@@ -96,6 +96,8 @@ filter: brightness(1000%);
 
 <p>The following WCAG 2.1 guidelines make up the baseline of accessibility issues we strive to test against in our products and websites. If there is a need to fully support WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
 
+<p>Please note that these baselines are subject to change as guidelines and our understanding of accessibility continue to evolve.</p>
+
 <div class="table-container">
 
   <table>
