--- a/a11y/baseline/index.html
+++ b/a11y/baseline/index.html
@@ -145,6 +145,12 @@ filter: brightness(1000%);
       <td><a href="https://www.w3.org/WAI/WCAG21/Understanding/pause-stop-hide" target="_blank" rel="noopener">Understanding SC 2.2.2 <span class="wai">(opens in new window)</span></a></td>
     </tr>
     <tr>
+      <td><a href="#three-flashes-or-below">2.3.1: Three Flashes or Below Threshold</a></td>
+      <td>A</td>
+      <td>No content flashes more than three times per second.</td>
+      <td><a href=https://www.w3.org/WAI/WCAG21/Understanding/three-flashes-or-below-threshold" target="_blank" rel="noopener">Understanding SC 2.3.1 <span class="wai">(opens in new window)</span></a></td>
+    </tr>
+    <tr>
       <td><a href="#bypass-blocks">2.4.1: Bypass Blocks</a></td>
       <td>A</td>
       <td>Provide a 'Skip to Content' link.</td>
@@ -361,6 +367,18 @@ filter: brightness(1000%);
   <ul>
     <li>Automatically moving, blinking, or scrolling content (such as carousels, marquees, or animations) that lasts longer than 5 seconds can be paused, stopped, or hidden by the user.</li>
     <li>Automatically updating content (e.g., a dynamically-updating news ticker, chat messages, etc.) can be paused, stopped, or hidden by the user or the user can manually control the timing of the updates.</li>
+  </ul>
+
+  <p><a href="#primary-content">Back to top</a></p>
+
+</div>
+
+<div id="three-flashes-or-below" class="section">
+
+  <h2>2.3.1: Three Flashes or Below Threshold</h2>
+
+  <ul>
+    <li>No page content <a href="https://webaim.org/articles/seizure/">flashes</a> more than 3 times per second unless that flashing content is sufficiently small and the flashes are of low contrast and do not contain too much red. (<a href="https://www.w3.org/TR/WCAG21/#dfn-general-flash-and-red-flash-thresholds">See general flash and red flash thresholds</a>)</li>
   </ul>
 
   <p><a href="#primary-content">Back to top</a></p>
