Fixed broken link

--- a/a11y/baseline/index.html
+++ b/a11y/baseline/index.html
@@ -136,7 +136,7 @@ filter: brightness(1000%);
       <td><a href="#three-flashes-or-below">2.3.1: Three Flashes or Below Threshold</a></td>
       <td>A</td>
       <td>No content flashes more than three times per second.</td>
-      <td><a href=https://www.w3.org/WAI/WCAG21/Understanding/three-flashes-or-below-threshold" target="_blank" rel="noopener">Understanding SC 2.3.1 <span class="wai">(opens in new window)</span></a></td>
+      <td><a href="https://www.w3.org/WAI/WCAG21/Understanding/three-flashes-or-below-threshold" target="_blank" rel="noopener">Understanding SC 2.3.1 <span class="wai">(opens in new window)</span></a></td>
     </tr>
     <tr>
       <td><a href="#bypass-blocks">2.4.1: Bypass Blocks</a></td>
