--- a/support/index.html
+++ b/support/index.html
@@ -21,11 +21,11 @@
   <li>Windows 10</li>
   <li>Windows 8/8.1</li>
   <li>macOS 10.14 (Mojave)</li>
+  <li>iOS 13.x</li>
   <li>iOS 12.x</li>
-  <li>iOS 11.x</li>
+  <li>Android 10.x</li>
+  <li>Android 9.x</li>
   <li>Android 8.x</li>
-  <li>Android 7.x</li>
-  <li>Android 6.x</li>
 </ul>
 
 <h2 id="browser">Browser Support</h2>
@@ -62,4 +62,14 @@
 
 <ul>
   <li>Internet Explorer 11</li>
+</ul>
+
+<h3 id="update-log">Update Log</h3>
+
+<ul>
+  <li><b>April 28th, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from browser support.</li>
+  <li><b>March 14th, 2019</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from from browser support.</li>
+  <li><b>March 1st, 2020</b> - iOS 13.x support added and iOS 12.x removed from browser support.</li>
+  <li><b>January 1st, 2020</b> - Limited support for Internet Explorer 11 goes into effect.</li>
+  <li><b>March 4th, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from from browser support.</li>
 </ul>
