--- a/support/index.html
+++ b/support/index.html
@@ -3,7 +3,7 @@
 
 <h2 id="web-standards">Web Standards</h2>
 
-<!-- img src="https://tbcdn.talentbrew.com/company/3401/v1_0/img/global/tmp-web-standards.png" class="article-image" alt="" -->
+<img src="https://tbcdn.talentbrew.com/company/3401/v1_0/img/global/tmp-web-standards.png" class="article-image" alt="TMP Worldwide logo wearing a blue beanie cap.">
 
 <p>Our design and development methodologies adhere to standards and guidelines proposed by the <a href="https://www.w3c.org/">W3C (World Wide Web Consortium)</a> and best practices found within the design and development community. By using the most modern and inclusive techniques available, TMP Worldwide can craft an experience that is both engaging and accessible to all users.</p>
 
