--- a/support/index.html
+++ b/support/index.html
@@ -1,5 +1,5 @@
 
-<p class="effective-date">Last updated <time>January 1st, 2020</time></p>
+<p class="effective-date">Last updated <time>April 28th, 2020</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
@@ -13,7 +13,7 @@
 
 <p>At TMP Worldwide, we believe that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individual’s right to universal access, we <em>attempt</em> to meet as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
 
-<h2 id="operating-systems">Operating System Support</h2>
+<h2 id="operating-system-support">Operating System Support</h2>
 
 <p>TMP supports applications on the following operating systems:</p>
 
@@ -28,18 +28,18 @@
   <li>Android 8.x</li>
 </ul>
 
-<h2 id="browser">Browser Support</h2>
+<h2 id="browser-support">Browser Support</h2>
 
 <p>TMP supports the <strong>current</strong> and <strong>prior major</strong> release versions of all major browsers. Corresponding to the date in which your project has launched, we test all work in the following:</p>
 
 <ul>
   <li><a href="https://developer.chrome.com/native-client/sdk/release-notes">Google Chrome</a></li>
   <li><a href="https://www.mozilla.org/en-US/firefox/releases/">Mozilla Firefox</a></li>
-  <li><a href="https://developer.apple.com/library/prerelease/mac/releasenotes/General/WhatsNewInSafari/Introduction/Introduction.html#//apple_ref/doc/uid/TP40014305-CH1-SW1">Apple Safari</a></li>
-  <li><a href="https://developer.microsoft.com/en-us/microsoft-edge/platform/changelog/">Microsoft Edge</a></li>
+  <li><a href="https://developer.apple.com/documentation/safari_release_notes">Apple Safari</a></li>
+  <li><a href="https://docs.microsoft.com/en-us/deployedge/microsoft-edge-relnote-stable-channel/">Microsoft Edge</a></li>
 </ul>
 
-<h2 id="email">Email Support</h2>
+<h2 id="email-support">Email Support</h2>
 
 <p>Corresponding to the date in which your project has launched, we test all text and HTML based emails in the following email clients:</p>
 
@@ -67,9 +67,9 @@
 <h3 id="update-log">Update Log</h3>
 
 <ul>
-  <li><b>April 28th, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from browser support.</li>
-  <li><b>March 14th, 2019</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from from browser support.</li>
-  <li><b>March 1st, 2020</b> - iOS 13.x support added and iOS 12.x removed from browser support.</li>
-  <li><b>January 1st, 2020</b> - Limited support for Internet Explorer 11 goes into effect.</li>
-  <li><b>March 4th, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from from browser support.</li>
+  <li><b>April 28th, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from <a href="#browser-support">Browser Support</a>.</li>
+  <li><b>March 14th, 2019</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from from <a href="#browser-support">Browser Support</a>.</li>
+  <li><b>March 1st, 2020</b> - iOS 13.x support added and iOS 12.x removed from <a href="#browser-support">Browser Support</a>.</li>
+  <li><b>January 1st, 2020</b> - Internet Explorer 11 added to <a href="#limited-support">Limited Support</a>.</li>
+  <li><b>March 4th, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from from <a href="#browser-support">Browser Support</a>.</li>
 </ul>
