--- a/support/index.html
+++ b/support/index.html
@@ -15,7 +15,7 @@
 
 <h2 id="operating-system-support">Operating System Support</h2>
 
-<p>TMP supports applications on the following operating systems:</p>
+<p>TMP supports applications on the following operating systems only:</p>
 
 <ul>
   <li>Windows 10</li>
@@ -33,9 +33,9 @@
 <p>TMP supports the <strong>current</strong> and <strong>prior major</strong> release versions of all major browsers. Corresponding to the date in which your project has launched, we test all work in the following:</p>
 
 <ul>
-  <li><a href="https://developer.chrome.com/native-client/sdk/release-notes">Google Chrome</a></li>
+  <li><a href="https://www.chromestatus.com/features/schedule/">Google Chrome</a></li>
   <li><a href="https://www.mozilla.org/en-US/firefox/releases/">Mozilla Firefox</a></li>
-  <li><a href="https://developer.apple.com/documentation/safari_release_notes">Apple Safari</a></li>
+  <li><a href="https://developer.apple.com/documentation/safari_release_notes/">Apple Safari</a></li>
   <li><a href="https://docs.microsoft.com/en-us/deployedge/microsoft-edge-relnote-stable-channel/">Microsoft Edge</a></li>
 </ul>
 
@@ -46,7 +46,7 @@
 <ul>
   <li>Outlook (Latest version of Outlook on Windows 10 only)</li>
   <li>iPhone (Latest version of iOS Mail only)</li>
-  <li>Gmail Desktop (Latest <a href="#browser">browser versions</a> only, except for Internet Explorer 11)</li>
+  <li>Gmail Desktop (Latest <a href="#browser-support">browser versions</a> only, except for Internet Explorer 11)</li>
   <li>Gmail Android (Upon Request Only)</li>
 </ul>
 
@@ -67,9 +67,9 @@
 <h3 id="update-log">Update Log</h3>
 
 <ul>
-  <li><b>April 28th, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from <a href="#browser-support">Browser Support</a>.</li>
-  <li><b>March 14th, 2019</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from from <a href="#browser-support">Browser Support</a>.</li>
-  <li><b>March 1st, 2020</b> - iOS 13.x support added and iOS 12.x removed from <a href="#browser-support">Browser Support</a>.</li>
+  <li><b>April 28th, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+  <li><b>March 14th, 2019</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from from <a href="#operating-system-support">Operating System Support</a>.</li>
+  <li><b>March 1st, 2020</b> - iOS 13.x support added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>January 1st, 2020</b> - Internet Explorer 11 added to <a href="#limited-support">Limited Support</a>.</li>
-  <li><b>March 4th, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from from <a href="#browser-support">Browser Support</a>.</li>
+  <li><b>March 4th, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from from <a href="#operating-system-support">Operating System Support</a>.</li>
 </ul>
