Added new support deets for email.

--- a/support/index.html
+++ b/support/index.html
@@ -1,5 +1,5 @@
 
-<p class="effective-date">Last updated <time>April 28th, 2020</time></p>
+<p class="effective-date">Last updated <time>September 25th, 2020</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
@@ -41,13 +41,18 @@
 
 <h2 id="email-support">Email Support</h2>
 
-<p>Corresponding to the date in which your project has launched, we test all text and HTML based emails in the following email clients:</p>
+<p>Corresponding to the date in which your project has launched and due to the vast technical differences in email client software, we test all text and HTML based emails in the following primary email client:</p>
 
 <ul>
-  <li>Outlook (Latest version of Outlook on Windows 10 only)</li>
-  <li>iPhone (Latest version of iOS Mail only)</li>
-  <li>Gmail Desktop (Latest <a href="#browser-support">browser versions</a> only, except for Internet Explorer 11)</li>
-  <li>Gmail Android (Upon Request Only)</li>
+  <li>Gmail Desktop (Latest browser versions only, except for Internet Explorer 11)</li>
+</ul>
+
+<p>Additionally, we test all text and HTML based emails on the following email clients. These may have differences in spacing and sizing of elements that vary from the primary testing email client:</p>
+
+<ul>
+  <li>Outlook (Latest version of Outlook on Windows 10 only) [Does not support responsive emails]</li>
+  <li>iPhone (Latest version of iOS Mail only) [Not all designs can be built responsively]</li>
+  <li>Gmail Android (Upon Request Only) [Not all designs can be built responsively]</li>
 </ul>
 
 <p>Our development team analyzes global <a href="https://gs.statcounter.com/">browser market share</a> and client web traffic data on a quarterly basis. Web browser support ends when that browser represents less than 5% of all market share and/or web traffic.</p>
@@ -67,6 +72,7 @@
 <h3 id="update-log">Update Log</h3>
 
 <ul>
+  <li><b>September 25th, 2020</b> - Updated <a href="#email-support">Email Support</a>.</li>
   <li><b>April 28th, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>March 14th, 2020</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>March 1st, 2020</b> - iOS 13.x support added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
