--- a/support/index.html
+++ b/support/index.html
@@ -1,3 +1,10 @@
+<style>
+
+#tmp-syndicate ul {
+margin-left: 2em;
+}
+
+</style>
 
 <p class="effective-date">Last updated <time>September 25th, 2020</time></p>
 
